--- a/MenuNavigation/Modelo01/index.html
+++ b/MenuNavigation/Modelo01/index.html
@@ -22,9 +22,9 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Modelo Footer - 01</title>
+    <title>Modelo Menu - 01</title>
   </head>
-<body>
-  
-</body>
+  <body>
+
+  </body>
 </html>
