--- a/MenuNavigation/Modelo02/index.html
+++ b/MenuNavigation/Modelo02/index.html
@@ -22,7 +22,9 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Modelo Menu - 02</title>
   </head>
-  <body></body>
+  <body>
+
+  </body>
 </html>
