--- a/Footer/Modelo02/index.html
+++ b/Footer/Modelo02/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Modelo Home - 01</title>
+    <title>Modelo Footer - 02</title>
   </head>
 <body>
   
